src/test/deca/context/invalid/init-int-boolean.deca
// Description : 
//	 test d'initialisation int <-- boolean
// Resultats :
//	 6:9: Non compatible assignment of expression
{
	int i = true;
}